--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ body{
 
 
 /*phone */
-@media only screen and  (max-device-width: 720px)   {
+ @media  screen and  (max-device-width: 720px)   {
    
 #head{
         background-color:rgb(207,128,123);
@@ -206,7 +206,7 @@ body{
     }
 a{  
     margin: 20px;
-    color: black;
+    
     font-size: 16px;
      
 }
@@ -223,10 +223,6 @@ a{
 .bar6{
    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-body{
-    background-image: url("images/img.jpg");
-   
 }
 
 .img1{
@@ -256,7 +252,7 @@ body{
     margin-left: 330px;
 }
 #make{
-    background-color:rgb(207,128,123);
+    
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
@@ -364,7 +360,7 @@ body{
 }
 
 /*tab*/
-@media only screen and (min-device-width: 730px) and (max-device-width: 2000px)  {
+/* @media screen and (max-device-width: 730px)  {
 #head{
         background-color:rgb(207,128,123);
         width:450vw;
@@ -525,10 +521,10 @@ body{
     width:450vw;
     height:200px
  }
-}
+} */
 
 
-@media only screen and (min-device-width: 280px) {
+@media only screen and (max-device-width: 1024px) {
 
     #head{
         background-color:rgb(207,128,123);
@@ -543,7 +539,7 @@ body{
         width:550vw;
         height:40px;
         position: relative;
-        top: -500px;
+        top: -10px;
         
     }
     #price{
@@ -552,11 +548,11 @@ body{
         height:40px;
         width:550vw;
         position: relative;
-        top: -2440px;
+        top: -20px;
     }
     #footer{
         background-color: rgb(207,128,123) ;
         width:550vw;
         height:200px
-     }
-}
+     } 
+    }
